--- a/public/404.html
+++ b/public/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <script type='text/javascript'>
+  <script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><script type='text/javascript'>
     let text404 = '404';
   </script><meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -25,7 +25,7 @@
         alt="Oops, we can&#39;t find the page you&#39;re looking for."
         src="/images/404.gif"
       />
-      <a id="footer404" href="/">Back to homepage</a>
+      <a id="footer404" href="//localhost:1313/">Back to homepage</a>
     </div>
   </body>
 </html>
