--- a/public/section4/index.html
+++ b/public/section4/index.html
@@ -398,22 +398,9 @@
 <div class="columns is-mobile is-marginless is-scroll-smooth has-toc" id="contentContainer">
   <div class="column" id="content"><div id="contentTitle">Пошаговые руководства</div>
 <h1 id='глоссарий'>Глоссарий<a href='#%d0%b3%d0%bb%d0%be%d1%81%d1%81%d0%b0%d1%80%d0%b8%d0%b9' class='anchor'>#</a>
-</h1><p>Панель администратора <figure class="float-left"><img src="/images/my_picture_1.png" width="20">
-</figure>
- &ndash; админка.</p>
+</h1><p>Панель администратора</p>
 <h1 id='определение'>Определение<a href='#%d0%be%d0%bf%d1%80%d0%b5%d0%b4%d0%b5%d0%bb%d0%b5%d0%bd%d0%b8%d0%b5' class='anchor'>#</a>
-</h1><pre tabindex="0"><code class="language-mermaid" data-lang="mermaid">graph TB
-    subgraph Étape 2
-    b1(Action 2.1) --&gt; b2(Action 2.2)
-    end
-    subgraph Étape 1
-    a1(Action 1.1) --&gt; a2(Action 1.2)
-    end
-</code></pre><p>ghgftrfh</p>
-<figure><img src="/images/my_picture.png" width="600">
-</figure>
-
-</div><div class="column is-sticky is-paddingless" id="tocWrapper">
+</h1></div><div class="column is-sticky is-paddingless" id="tocWrapper">
   <div class="is-paddingless" id="tocContainer">
     <div class="toc-header">
       <h6 class="toc-title is-marginless">Содержание:</h6>
@@ -487,12 +474,6 @@
     ></script><script
       type="module"
       src="/docs_cif/js/theme/toc.min.js"
-    ></script><script
-      type="module"
-      src="/docs_cif/js/external/mermaid/mermaid.min.js"
-    ></script><script
-      type="module"
-      src="/docs_cif/js/fencedcodes/mermaid.min.js"
     ></script><script
       type="text/javascript"
       src="/docs_cif/js/theme/browserCompatibility.min.js"
