--- a/public/index.html
+++ b/public/index.html
@@ -7,26 +7,26 @@
 
 <link
   rel="icon"
-  href="/images/favicon.png"
+  href="/docs_cif/images/favicon.png"
   type="image/x-icon"
 />
 <link
     rel="stylesheet"
     rel="preload"
     type="text/css"
-    href="/css/main.css"
+    href="/docs_cif/css/main.css"
   /><link
       rel="stylesheet"
       type="text/css"
-      href="/css/external/fontawesome.all.min.css"
+      href="/docs_cif/css/external/fontawesome.all.min.css"
     /><link
       rel="stylesheet"
       type="text/css"
-      href="/css/external/overlay-scrollbars/overlayscrollbars.min.css"
+      href="/docs_cif/css/external/overlay-scrollbars/overlayscrollbars.min.css"
     /><link
       rel="stylesheet"
       type="text/css"
-      href="/css/custom.min.css"
+      href="/docs_cif/css/custom.min.css"
     />
 </head>
   <body onload="browserCompatibility()"><div id="navbarInfo" class="is-hidden modal-container">
@@ -93,21 +93,21 @@
   <a
     id="globalLogo"
     class="navbar-item navbar-item-standard is-paddingless"
-    href="/"
+    href="/docs_cif/"
   >
     <img
       alt="Домашняя страница"
-      src="/images/logo.png"
+      src="/docs_cif/images/logo.png"
     />
   </a>
   <a
     id="globalTouchLogo"
     class="navbar-item navbar-item-standard is-paddingless"
-    href="/"
+    href="/docs_cif/"
   >
     <img
       alt="Домашняя страница"
-      src="/images/logoTouch.png"
+      src="/docs_cif/images/logoTouch.png"
     />
   </a>
 </div>
@@ -253,14 +253,14 @@
       <aside class="menu is-paddingless is-marginless">
         <ul class="menu-list is-marginless is-paddingless"><div class="card is-fs-expandable-icon"><div class="card-header is-single-link">
       <a
-        href='/section1/'
+        href='/docs_cif/section1/'
         class='card-header-title'>
         <i class='fa-solid fa-star fa-lg'></i></a></div>
       </div><div class="is-expandable">
       <div class="is-sidebar-list-wrapper"><li class="is-marginless"><div
             class="card"><div class="card-header is-single-link">
       <a
-        href='/section1/'
+        href='/docs_cif/section1/'
         class='card-header-title'
           title='Введение'>
         <i class='fa-solid fa-star fa-lg'></i><p class="pt-0 pb-0 pr-2 pl-1">Введение</p></a></div>
@@ -268,14 +268,14 @@
       </div>
     </div><div class="card is-fs-expandable-icon"><div class="card-header">
       <a
-        href='/section2/'
+        href='/docs_cif/section2/'
         class='card-header-title'>
         <i class='fa-solid fa-shapes fa-lg'></i></a></div>
       </div><div class="is-expandable">
       <div class="is-sidebar-list-wrapper"><li class="is-marginless is-entries-expandable is-entries-shrinked"><div
             class="card"><div class="card-header">
       <a
-        href='/section2/'
+        href='/docs_cif/section2/'
         class='card-header-title'
           title='Платформа'>
         <i class='fa-solid fa-shapes fa-lg'></i><p class="pt-0 pb-0 pr-2 pl-1">Платформа</p></a><a class="card-header-icon is-icon-expandable is-paddingless is-icon-shrinked">
@@ -286,7 +286,7 @@
       <div class=""><li class="is-marginless"><div
             class="card"><div class="card-header is-single-link">
       <a
-        href='/section2/platform_1/'
+        href='/docs_cif/section2/platform_1/'
         class='card-header-title'
           title='EDU'>
         <i class='fa-solid fa-turn-up fa-rotate-90 fa-xs'></i><p class="pt-0 pb-0 pr-2 pl-0">EDU</p></a></div>
@@ -296,7 +296,7 @@
       <div class=""><li class="is-marginless"><div
             class="card"><div class="card-header is-single-link">
       <a
-        href='/section2/platform_2/'
+        href='/docs_cif/section2/platform_2/'
         class='card-header-title'
           title='MO'>
         <i class='fa-solid fa-turn-up fa-rotate-90 fa-xs'></i><p class="pt-0 pb-0 pr-2 pl-0">MO</p></a></div>
@@ -306,14 +306,14 @@
       </div>
     </div><div class="card is-fs-expandable-icon"><div class="card-header is-single-link">
       <a
-        href='/section3/'
+        href='/docs_cif/section3/'
         class='card-header-title'>
         <i class='fa-solid fa-user-gear fa-lg'></i></a></div>
       </div><div class="is-expandable">
       <div class="is-sidebar-list-wrapper"><li class="is-marginless"><div
             class="card"><div class="card-header is-single-link">
       <a
-        href='/section3/'
+        href='/docs_cif/section3/'
         class='card-header-title'
           title='Панель Администратора'>
         <i class='fa-solid fa-user-gear fa-lg'></i><p class="pt-0 pb-0 pr-2 pl-1">Панель Администратора</p></a></div>
@@ -321,14 +321,14 @@
       </div>
     </div><div class="card is-fs-expandable-icon"><div class="card-header is-single-link">
       <a
-        href='/section4/'
+        href='/docs_cif/section4/'
         class='card-header-title'>
         <i class='fa-solid fa-shoe-prints fa-lg'></i></a></div>
       </div><div class="is-expandable">
       <div class="is-sidebar-list-wrapper"><li class="is-marginless"><div
             class="card"><div class="card-header is-single-link">
       <a
-        href='/section4/'
+        href='/docs_cif/section4/'
         class='card-header-title'
           title='Пошаговые руководства'>
         <i class='fa-solid fa-shoe-prints fa-lg'></i><p class="pt-0 pb-0 pr-2 pl-1">Пошаговые руководства</p></a></div>
@@ -336,14 +336,14 @@
       </div>
     </div><div class="card is-fs-expandable-icon"><div class="card-header is-single-link">
       <a
-        href='/section5/'
+        href='/docs_cif/section5/'
         class='card-header-title'>
         <i class='fa-solid fa-code-pull-request fa-lg'></i></a></div>
       </div><div class="is-expandable">
       <div class="is-sidebar-list-wrapper"><li class="is-marginless"><div
             class="card"><div class="card-header is-single-link">
       <a
-        href='/section5/'
+        href='/docs_cif/section5/'
         class='card-header-title'
           title='Техническая документация'>
         <i class='fa-solid fa-code-pull-request fa-lg'></i><p class="pt-0 pb-0 pr-2 pl-1">Техническая документация</p></a></div>
@@ -351,14 +351,14 @@
       </div>
     </div><div class="card is-fs-expandable-icon"><div class="card-header is-single-link">
       <a
-        href='/section6/'
+        href='/docs_cif/section6/'
         class='card-header-title'>
         <i class='fa-regular fa-circle-question fa-lg'></i></a></div>
       </div><div class="is-expandable">
       <div class="is-sidebar-list-wrapper"><li class="is-marginless"><div
             class="card"><div class="card-header is-single-link">
       <a
-        href='/section6/'
+        href='/docs_cif/section6/'
         class='card-header-title'
           title='Вопрос-ответ'>
         <i class='fa-regular fa-circle-question fa-lg'></i><p class="pt-0 pb-0 pr-2 pl-1">Вопрос-ответ</p></a></div>
@@ -399,7 +399,7 @@
   <div class="column" id="content"><div id="contentTitle">Документация Платформы Цифриума</div>
 </div></div>
 </div><script type='text/javascript'>
-  const baseUrl = new URL('', 'https:\/\/gosyuliya.github.io\/').href;
+  const baseUrl = new URL('', 'https:\/\/gosyuliya.github.io\/docs_cif\/').href;
   const codeCopyBefore = 'Copy to clipboard';
   const codeCopyAfter = 'Copied to clipboard';
   const svgDownloadLabel = 'Download as SVG';
@@ -416,49 +416,49 @@
 </script>
 <script
       type="module"
-      src="/js/theme/modules/const.min.js"
+      src="/docs_cif/js/theme/modules/const.min.js"
     ></script><script
       type="module"
-      src="/js/theme/modules/helpers.min.js"
+      src="/docs_cif/js/theme/modules/helpers.min.js"
     ></script><script
       type="module"
-      src="/js/theme/modules/helpersGlobal.min.js"
+      src="/docs_cif/js/theme/modules/helpersGlobal.min.js"
     ></script><script
       type="module"
-      src="/js/theme/init.min.js"
+      src="/docs_cif/js/theme/init.min.js"
     ></script><script
       type="module"
-      src="/js/theme/navbar.min.js"
+      src="/docs_cif/js/theme/navbar.min.js"
     ></script><script
       type="module"
-      src="/js/theme/print.min.js"
+      src="/docs_cif/js/theme/print.min.js"
     ></script><script
       type="module"
-      src="/js/theme/qrcode.min.js"
+      src="/docs_cif/js/theme/qrcode.min.js"
     ></script><script
       type="module"
-      src="/js/theme/search.min.js"
+      src="/docs_cif/js/theme/search.min.js"
     ></script><script
       type="module"
-      src="/js/theme/shortcuts.min.js"
+      src="/docs_cif/js/theme/shortcuts.min.js"
     ></script><script
       type="module"
-      src="/js/theme/sidebar.min.js"
+      src="/docs_cif/js/theme/sidebar.min.js"
     ></script><script
       type="module"
-      src="/js/theme/toc.min.js"
+      src="/docs_cif/js/theme/toc.min.js"
     ></script><script
       type="text/javascript"
-      src="/js/theme/browserCompatibility.min.js"
+      src="/docs_cif/js/theme/browserCompatibility.min.js"
     ></script><script
       type="text/javascript"
-      src="/js/external/flexsearch/flexsearch.bundle.min.js"
+      src="/docs_cif/js/external/flexsearch/flexsearch.bundle.min.js"
     ></script><script
       type="text/javascript"
-      src="/js/external/qrious/qrious.min.js"
+      src="/docs_cif/js/external/qrious/qrious.min.js"
     ></script><script
       type="text/javascript"
-      src="/js/external/overlay-scrollbars/overlayscrollbars.min.js"
+      src="/docs_cif/js/external/overlay-scrollbars/overlayscrollbars.min.js"
     ></script>
 </body>
 </html>
