--- a/public/404.html
+++ b/public/404.html
@@ -9,13 +9,13 @@
 
 <link
   rel="icon"
-  href="/images/favicon.png"
+  href="/docs_cif/images/favicon.png"
   type="image/x-icon"
 />
 <link
     rel="stylesheet"
     type="text/css"
-    href="/css/404.css"
+    href="/docs_cif/css/404.css"
   />
   <body>
     <div id="content404">
@@ -23,9 +23,9 @@
       <p id="title404">Oops, we can&#39;t find the page you&#39;re looking for.</p>
       <img
         alt="Oops, we can&#39;t find the page you&#39;re looking for."
-        src="/images/404.gif"
+        src="/docs_cif/images/404.gif"
       />
-      <a id="footer404" href="/">Back to homepage</a>
+      <a id="footer404" href="/docs_cif/">Back to homepage</a>
     </div>
   </body>
 </html>
