--- a/public/section1/index.html
+++ b/public/section1/index.html
@@ -404,8 +404,10 @@
   href="/docs_cif/section2/#%d0%9e%d0%bf%d1%80%d0%b5%d0%b4%d0%b5%d0%bb%d0%b5%d0%bd%d0%b8%d0%b5"
     class="is-pretty-link">Платформа</a
 >
- - раздел, который познакомит вас с продуктовой линейкой компании Цифриум. Вы узнаете что из себя представляет наша Платформа, из чего она состоит и как с ней взаимодействуют внутренние и внешние пользоавтели.</li>
-<li></li>
+ - раздел, который познакомит вас с продуктовой линейкой компании Цифриум. Вы узнаете что из себя представляет наша Платформа, из чего она состоит и как с ней взаимодействуют внутренние и внешние пользоавтели.
+*Gfytkm flvbybcnhfnjhf
+прпомтмопп
+поиоара м мтьт</li>
 </ul>
 </div><div class="column is-sticky is-paddingless" id="tocWrapper">
   <div class="is-paddingless" id="tocContainer">
