--- a/public/section1/index.html
+++ b/public/section1/index.html
@@ -407,7 +407,8 @@
  - раздел, который познакомит вас с продуктовой линейкой компании Цифриум. Вы узнаете что из себя представляет наша Платформа, из чего она состоит и как с ней взаимодействуют внутренние и внешние пользоавтели.
 *Gfytkm flvbybcnhfnjhf
 прпомтмопп
-поиоара м мтьт</li>
+поиоара м мтьт
+рорнпрммар</li>
 </ul>
 </div><div class="column is-sticky is-paddingless" id="tocWrapper">
   <div class="is-paddingless" id="tocContainer">
