--- a/public/section1/index.html
+++ b/public/section1/index.html
@@ -409,6 +409,8 @@
 прпомтмопп
 поиоара м мтьт
 рорнпрммар</li>
+<li>рпнепио
+#mjjjjjjjjjj</li>
 </ul>
 </div><div class="column is-sticky is-paddingless" id="tocWrapper">
   <div class="is-paddingless" id="tocContainer">
