--- a/public/section2/index.html
+++ b/public/section2/index.html
@@ -398,7 +398,8 @@
 <div class="columns is-mobile is-marginless is-scroll-smooth has-toc" id="contentContainer">
   <div class="column" id="content"><div id="contentTitle">Платформа</div>
 <h2 id='глоссарий'>Глоссарий<a href='#%d0%b3%d0%bb%d0%be%d1%81%d1%81%d0%b0%d1%80%d0%b8%d0%b9' class='anchor'>#</a>
-</h2><p>Панель администратора &ndash; админка.</p>
+</h2><p>Панель администратора &ndash; админка.
+fjfhfurhfnnc</p>
 <h2 id='определение'>Определение<a href='#%d0%be%d0%bf%d1%80%d0%b5%d0%b4%d0%b5%d0%bb%d0%b5%d0%bd%d0%b8%d0%b5' class='anchor'>#</a>
 </h2><p>Платформа -</p>
 <h3 id='инстансы'>Инстансы<a href='#%d0%b8%d0%bd%d1%81%d1%82%d0%b0%d0%bd%d1%81%d1%8b' class='anchor'>#</a>
